--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ clap = { version = "4.5.1", features = ["derive"] }
 tauri = { version = "1.5.4", features = [] }
 url = "2.5.0"
 
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3.9", features = ["wincon"] }
+
 [build-dependencies]
 tauri-build = { version = "1.5.1", features = [] }
 
